# rust_weather_app

./: Cargo.toml  README.md  Weather App Flow  result1.json  result2.json
release/install/: install.sh  publish.sh
src/: cli.yml  main.rs
src/utils/: mod.rs
