[package]
name = "rweather"
version = "0.0.1"
authors = ["rakh1213 <rail.khamitov@netcracker.com>"]
edition = "2018"
readme = " Simple Weather command line client"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.21"
serde = "1.0.101"
serde_json = "1.0.41"
whoami = "0.5.3"
clap = {version = "2.33.0",features = ["yaml"]}
chrono = "0.4.9"